Add distance slice calibration

--- a/notebooks/WallAnalysis.ipynb
+++ b/notebooks/WallAnalysis.ipynb
@@ -188,7 +188,7 @@
     "    \"degree\": degree, \n",
     "    \"distance\": distance, \n",
     "    \"mic_type\": \"audio_deck\",\n",
-    "    #\"appendix\": \"_window3\"\n",
+    "    \"appendix\": \"_window2\"\n",
     "}\n",
     "df_filtered = filter_by_dict(df_all, chosen_dict)\n",
     "print(\"plotting\\n\", df_filtered.iloc[:, :8])\n",
@@ -221,8 +221,7 @@
     "        label += f\"mic{mic}\"\n",
     "\n",
     "        wall_detector = WallDetector.init_from_row(exp_name, row)\n",
-    "\n",
-    "        spec_all = wall_detector.current_spectrogram\n",
+    "        spec_all = np.abs(wall_detector.current_spectrogram)\n",
     "        freqs = wall_detector.current_freqs\n",
     "        \n",
     "        # plotting\n",
@@ -280,11 +279,12 @@
     "import time\n",
     "from frequency_analysis import interpolate_peak, fit_peak\n",
     "\n",
+    "mic_idx = 0\n",
     "chosen_dict = {\n",
     "    \"degree\": degree, \n",
     "    \"distance\": distance, \n",
     "    \"mic_type\": \"audio_deck\",\n",
-    "    \"appendix\":\"_window3\",\n",
+    "    \"appendix\":\"_window2\",\n",
     "    \"motors\":\"all45000\"\n",
     "}\n",
     "df_filtered = filter_by_dict(df_all, chosen_dict)\n",
@@ -295,47 +295,63 @@
     "spec = wall_detector.current_spectrogram\n",
     "freqs = wall_detector.current_freqs\n",
     "\n",
-    "t_idx = 300 \n",
-    "mic_idx = 0\n",
-    "spec_slice = spec[:, mic_idx, t_idx]\n",
-    "\n",
-    "max_without = np.max(np.abs(spec_slice))\n",
-    "print(f'magniutde estimate without fitting: {max_without:.2f}')\n",
-    "\n",
-    "# use full slice\n",
+    "n_extra = 12\n",
+    "time_range = list(range(282, 291))\n",
     "fig, ax = plt.subplots()\n",
+    "plot_range = list(\n",
+    "    range(time_range[0]-n_extra, time_range[0]) \n",
+    ") + time_range + list(\n",
+    "    range(time_range[-1]+1, time_range[-1]+n_extra+1) \n",
+    ")\n",
+    "spec_plot =  np.abs(spec[:, mic_idx, plot_range])\n",
+    "freqs_valid = np.any(spec_plot, axis=1)\n",
+    "spec_plot = spec_plot[freqs_valid]\n",
+    "im = ax.pcolorfast(plot_range, freqs[freqs_valid], spec_plot[:-1, :-1])\n",
+    "add_colorbar(fig, ax , im)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, axs = plt.subplots(2, 1, sharex=True)\n",
     "fig.set_size_inches(10, 5)\n",
-    "ax.plot(freqs, np.abs(spec_slice))\n",
-    "max_val, max_freq = interpolate_peak(spec_slice, freqs, ax=ax)\n",
-    "print(f'magniutde estimate with interpolation with all points: {max_val:.2f}')\n",
-    "ax.axvline(max_freq, color='C2')\n",
-    "ax.set_xlim(max_freq-500, max_freq+500)\n",
     "\n",
-    "# use slice around max\n",
-    "bin_max = np.argmax(np.abs(spec_slice))\n",
-    "n_points = 2\n",
-    "range_max = range(bin_max-n_points, bin_max+n_points)\n",
-    "spec_smaller = spec_slice[range_max]\n",
-    "freq_smaller = freqs[range_max]\n",
+    "for t_idx in time_range:\n",
+    "    spec_slice = spec[:, mic_idx, t_idx]\n",
     "\n",
-    "fig, ax = plt.subplots()\n",
-    "fig.set_size_inches(10, 5)\n",
-    "ax.plot(freqs, np.abs(spec_slice))\n",
-    "max_val_smaller, max_freq_smaller = interpolate_peak(spec_smaller, freq_smaller, pad_factor=2, ax=ax)\n",
-    "print(f'magniutde estimate with interpolation with {n_points} points: {max_val_smaller:.2f}')\n",
-    "ax.axvline(max_freq_smaller, color='C2')\n",
-    "ax.set_xlim(max_freq_smaller-500, max_freq_smaller+500)\n",
+    "    max_without = np.max(np.abs(spec_slice))\n",
+    "    #print(f'magniutde estimate without fitting: {max_without:.2f}')\n",
     "\n",
-    "max_peak, p = fit_peak(spec_slice)\n",
-    "print(f'magniutde estimate with peak fitting: {max_peak:.2f}')\n",
+    "    # use full slice\n",
+    "    max_val, max_freq = interpolate_peak(spec_slice, freqs)#, ax=ax)\n",
     "    \n",
-    "n_times = 100\n",
-    "times = []\n",
-    "for i in range(n_times):\n",
-    "    t0 = time.time()\n",
-    "    max_val, max_freq = interpolate_peak(spec_slice, freqs)\n",
-    "    times.append(time.time() - t0)\n",
-    "print(f'average time: {np.mean(times)}s')"
+    "    #print(f'magniutde estimate with interpolation with all points: {max_val:.2f}')\n",
+    "    phase = np.angle(spec_slice)\n",
+    "    axs[0].plot(freqs, np.abs(spec_slice), label=t_idx)\n",
+    "    axs[1].plot(freqs, phase, label=t_idx)\n",
+    "    #ax.axvline(max_freq, color='C1')\n",
+    "    axs[0].set_xlim(max_freq-500, max_freq+500)\n",
+    "    axs[0].set_xlim(5400, 5700)\n",
+    "\n",
+    "    # use slice around max\n",
+    "    bin_max = np.argmax(np.abs(spec_slice))\n",
+    "    n_points = 2\n",
+    "    range_max = range(bin_max-n_points, bin_max+n_points)\n",
+    "    spec_smaller = spec_slice[range_max]\n",
+    "    freq_smaller = freqs[range_max]\n",
+    "\n",
+    "    max_val_smaller, max_freq_smaller = interpolate_peak(spec_smaller, freq_smaller, pad_factor=2)\n",
+    "    #print(f'magniutde estimate with interpolation with {n_points} points: {max_val_smaller:.2f}')\n",
+    "    #ax.plot(freqs, np.abs(spec_slice))\n",
+    "    #ax.axvline(max_freq_smaller, color='C2')\n",
+    "    #ax.set_xlim(max_freq_smaller-500, max_freq_smaller+500)\n",
+    "\n",
+    "    max_peak, p = fit_peak(np.abs(spec_slice))\n",
+    "    #print(f'magniutde estimate with peak fitting: {max_peak:.2f}')\n",
+    "axs[0].legend()"
    ]
   },
   {
@@ -490,7 +506,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pandas_utils import filter_by_dicts\n",
+    "from pandas_utils import filter_by_dict\n",
     "\n",
     "#exp_name = \"2021_02_23_wall\"\n",
     "exp_name = \"2021_02_25_wall\"\n",
@@ -504,7 +520,7 @@
     "\n",
     "filter_dict = dict(exp_name=exp_name, motors=motors, mic_type=mic_type)\n",
     "\n",
-    "df = filter_by_dicts(results_df, [filter_dict])\n",
+    "df = filter_by_dict(results_df, filter_dict)\n",
     "assert len(df) == 1\n",
     "row = df.iloc[0]\n",
     "row"
@@ -576,20 +592,22 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [],
    "source": [
-    "from constants import SPEED_OF_SOUND\n",
-    "def plot_distance_slice(slice_exp, slice_the, dist_exp, dist_the, plot_d=False, plot_f=True):\n",
-    "    \n",
+    "#TODO(FD): remove below if not used anymore\n",
+    "def plot_distance_slice(\n",
+    "    slice_exp, slice_the, dist_exp, dist_the, plot_d=False, plot_f=True\n",
+    "):\n",
+    "\n",
     "    fig = fig_f = None\n",
-    "    \n",
+    "\n",
     "    if plot_d:\n",
     "        fig, axs = plt.subplots(1, slice_exp.shape[0], squeeze=False, sharey=True)\n",
     "        fig.set_size_inches(10, 5)\n",
     "        fig.suptitle(f\"standardized distance slices, at frequency {f:.0f}Hz\")\n",
-    "        \n",
+    "\n",
     "    if plot_f:\n",
     "        fig_f, axs_f = plt.subplots(1, slice_exp.shape[0], squeeze=False, sharey=True)\n",
     "        fig_f.set_size_inches(10, 5)\n",
@@ -598,8 +616,7 @@
     "    for m in range(slice_exp.shape[0]):\n",
     "        slice_exp_norm = deepcopy(slice_exp[m])\n",
     "        slice_the_norm = deepcopy(slice_the[m])\n",
-    "        \n",
-    "        \n",
+    "\n",
     "        slice_exp_norm -= np.mean(slice_exp_norm)\n",
     "        slice_exp_norm /= np.max(slice_exp_norm) - np.min(slice_exp_norm)\n",
     "\n",
@@ -607,15 +624,15 @@
     "        slice_the_norm /= np.max(slice_the_norm) - np.min(slice_the_norm)\n",
     "\n",
     "        if plot_d:\n",
-    "            axs[0, m].plot(dist_the, slice_the_norm, label='theoretical')\n",
-    "            axs[0, m].plot(dist_exp, slice_exp_norm, label='measured')\n",
+    "            axs[0, m].plot(dist_the, slice_the_norm, label=\"theoretical\")\n",
+    "            axs[0, m].plot(dist_exp, slice_exp_norm, label=\"measured\")\n",
     "            axs[0, m].set_title(f\"mic{m}\")\n",
-    "            axs[0, m].legend(loc='upper right')\n",
-    "            \n",
+    "            axs[0, m].legend(loc=\"upper right\")\n",
+    "\n",
     "        n = max(len(slice_exp_norm), 1000)\n",
-    "        freqs_exp = np.fft.rfftfreq(n, d=dist_exp[1]-dist_exp[0]) # unit: 1/cm\n",
-    "        freqs_theory = np.fft.rfftfreq(n, d=dist_the[1]-dist_the[0]) # unit: 1/cm\n",
-    "        \n",
+    "        freqs_exp = np.fft.rfftfreq(n, d=dist_exp[1] - dist_exp[0])  # unit: 1/cm\n",
+    "        freqs_theory = np.fft.rfftfreq(n, d=dist_the[1] - dist_the[0])  # unit: 1/cm\n",
+    "\n",
     "        fft_exp = np.abs(np.fft.rfft(slice_exp_norm, n=n))\n",
     "        fft_exp /= np.sum(fft_exp)\n",
     "\n",
@@ -623,30 +640,79 @@
     "        fft_theory /= np.sum(fft_theory)\n",
     "\n",
     "        if plot_f:\n",
-    "            axs_f[0, m].plot(freqs_theory, fft_theory, label='theoretical')\n",
-    "            axs_f[0, m].plot(freqs_exp, fft_exp, label='measured')\n",
+    "            axs_f[0, m].plot(freqs_theory, fft_theory, label=\"theoretical\")\n",
+    "            axs_f[0, m].plot(freqs_exp, fft_exp, label=\"measured\")\n",
     "            axs_f[0, m].set_title(f\"mic{m}\")\n",
-    "            axs_f[0, m].legend(loc='upper right')\n",
+    "            axs_f[0, m].legend(loc=\"upper right\")\n",
     "    return fig, fig_f\n",
     "\n",
     "\n",
     "valid_freqs = df_freq[~np.any(np.isnan(df_matrix), axis=(0, 2))]\n",
-    "plot_freqs = [valid_freqs[0], valid_freqs[len(valid_freqs)//2], valid_freqs[-2]]\n",
+    "plot_freqs = [valid_freqs[0], valid_freqs[len(valid_freqs) // 2], valid_freqs[-2]]\n",
     "for i, f in enumerate(df_freq):\n",
-    "    slice_exp=df_matrix[:, i, :]\n",
+    "    slice_exp = df_matrix[:, i, :]\n",
     "    if np.any(np.isnan(slice_exp)):\n",
     "        slice_exp = fill_nans(slice_exp, row.df_dist)\n",
-    "    \n",
+    "\n",
     "    fig, fig_f = plot_distance_slice(\n",
     "        slice_exp=slice_exp,\n",
     "        slice_the=df_theory_pruned[:, i, :],\n",
     "        dist_exp=row.df_dist,\n",
     "        dist_the=distances_grid,\n",
-    "        plot_d=True, \n",
+    "        plot_d=True,\n",
     "        plot_f=True,\n",
     "    )\n",
     "    if f in plot_freqs:\n",
-    "        save_fig(fig, f'plots/{fname}_distance_slice_{f:.0f}.pdf')"
+    "        save_fig(fig, f\"plots/{fname}_distance_slice_{f:.0f}.pdf\")\n",
+    "    break "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from calibration import fit_distance_slice\n",
+    "from simulation import get_dist_slice_theory\n",
+    "\n",
+    "valid_freqs = df_freq[~np.any(np.isnan(df_matrix), axis=(0, 2))]\n",
+    "plot_freqs = [valid_freqs[0], valid_freqs[len(valid_freqs) // 2], valid_freqs[-2]]\n",
+    "\n",
+    "chosen_mics = [2]\n",
+    "for i, f in enumerate(df_freq):\n",
+    "    slice_exp = df_matrix[:, i, :]\n",
+    "    if np.any(np.isnan(slice_exp)):\n",
+    "        slice_exp = fill_nans(slice_exp, row.df_dist)\n",
+    "\n",
+    "    print(f\"for: frequency {f}Hz\")\n",
+    "    #print(\"attenuation, absorption, gain, distance offset\")\n",
+    "    fig, axs = plt.subplots(1, len(chosen_mics), sharey=True, squeeze=False)\n",
+    "    fig.set_size_inches(5*len(chosen_mics), 5)\n",
+    "    for i, mic_idx in enumerate(chosen_mics):\n",
+    "        # heuristic\n",
+    "        # TODO(FD) find out where 13 here comes from? \n",
+    "        gain_x = np.round(np.median(slice_exp[mic_idx, :]), 2)/13\n",
+    "        coeffs_h = [1.0, 0.2, gain_x, 0]\n",
+    "        slice_heur = get_dist_slice_theory(\n",
+    "            f,\n",
+    "            row.df_dist+coeffs_h[3],\n",
+    "            yaw_deg=0,\n",
+    "            chosen_mics=[mic_idx],\n",
+    "            attenuation=coeffs_h[0],\n",
+    "            wall_absorption=coeffs_h[1],\n",
+    "            gain_x=coeffs_h[2]\n",
+    "        )\n",
+    "        coeffs, slice_calib, cost = fit_distance_slice(\n",
+    "            slice_exp.T, row.df_dist, yaw_deg=0, frequency=f, chosen_mics=[mic_idx]\n",
+    "        )\n",
+    "        print(f\"gain for {mic_idx}: {coeffs_h[2]:.2f}, {coeffs[2]:.2f}, {coeffs_h[2]/coeffs[2]:.2f}, {cost:.2f}\")\n",
+    "        axs[0, i].plot(row.df_dist, slice_exp[mic_idx, :], label=\"experimental\")\n",
+    "        axs[0, i].plot(row.df_dist, slice_calib[:, 0], label=\"calibrated\")\n",
+    "        axs[0, i].plot(row.df_dist, slice_heur[:, 0], label=\"heuristic\")\n",
+    "        axs[0, i].set_title(f'mic{mic_idx}')\n",
+    "    fig.suptitle(f'{f}Hz')\n",
+    "    axs[0, i].legend()"
    ]
   },
   {
@@ -656,6 +722,7 @@
    "outputs": [],
    "source": [
     "# distance slice algorithm\n",
+    "from constants import SPEED_OF_SOUND\n",
     "gt = 90\n",
     "abs_err_dict = {f\"mic{m}\": [np.nan]*len(df_freq) for m in range(df_matrix.shape[0])}\n",
     "\n",
