--- a/notebooks/WallStudy.ipynb
+++ b/notebooks/WallStudy.ipynb
@@ -216,40 +216,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# find parameters based on distance slice.\n",
-    "from scipy.optimize import minimize, brute\n",
-    "\n",
-    "def distance_slice_cost(coeffs, d_slice_exp_flat, mic_idx, ax=None):\n",
-    "    if mic_idx is None:\n",
-    "        chosen_mics = range(4)\n",
-    "    else:\n",
-    "        chosen_mics = [mic_idx]\n",
-    "        \n",
-    "    d_slice = get_dist_slice_theory(\n",
-    "        frequency,\n",
-    "        distances_cm=distances_cm,\n",
-    "        yaw_deg=yaw_deg,\n",
-    "        attenuation=coeffs[0],\n",
-    "        wall_absorption=coeffs[1],\n",
-    "        chosen_mics=chosen_mics,\n",
-    "    )\n",
-    "    d_slice_exp = d_slice_exp_flat.reshape((-1, 4))[:, chosen_mics]\n",
-    "    \n",
-    "    if ax is not None:\n",
-    "        for i, mic in enumerate(chosen_mics):\n",
-    "            ax.plot(distances_cm, Hs[:, i], label=f\"mic{mic}\", ls=\"-\", color=f\"C{mic}\")\n",
-    "            ax.plot(distances_cm, d_slice[:, i], ls=\":\", color=f\"C{mic}\")\n",
-    "        ax.legend()\n",
-    "    return np.linalg.norm(d_slice - d_slice_exp, ord=1)\n",
-    "\n",
-    "mic_idx = 1 \n",
-    "for mic_idx in [0, None]:\n",
-    "    #sol = brute(fun, ((0, 2), (0, 1)), args=(Hs.flatten(), mic_idx))\n",
-    "    sol = minimize(distance_slice_cost, [1.0, 0.2], (Hs.flatten(), None)).x\n",
-    "    print(f\"attenuation [1/m]: {sol[0]:.4f}, absorption: {sol[1]:.4f}\")\n",
+    "from calibration import fit_distance_slice\n",
+    "for chosen_mics in [[0], range(4)]:\n",
+    "    coeffs, d_slice = fit_distance_slice(Hs, distances_cm, yaw_deg, frequency, chosen_mics)\n",
+    "    print(coeffs)\n",
     "    fig, ax = plt.subplots()\n",
-    "    distance_slice_cost(sol, Hs.flatten(), None, ax=ax)\n",
-    "    ax.set_title(f'optimization with mic: {mic_idx}')"
+    "    for i, mic in enumerate(chosen_mics):\n",
+    "        ax.plot(distances_cm, Hs[:, i], label=f\"mic{mic}\", ls=\"-\", color=f\"C{mic}\")\n",
+    "        ax.plot(distances_cm, d_slice[:, i], ls=\":\", color=f\"C{mic}\")\n",
+    "    ax.legend()\n",
+    "    ax.set_title(f'optimization with mics: {chosen_mics}')"
    ]
   },
   {
