Create new approach angle inference, fix calibration (remove attenuation)

--- a/notebooks/WallAnalysis.ipynb
+++ b/notebooks/WallAnalysis.ipynb
@@ -32,10 +32,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_performance(absolute_err, xs=None, xlabel=\"\", ylabel=\"absolute error\"):\n",
+    "def plot_performance(err_dict, xs=None, xlabel=\"\", ylabel=\"error\"):\n",
     "    \"\"\" Plot error evolution over xs and as cdf. \"\"\"\n",
     "    if xs is None:\n",
-    "        xs = range(len(absolute_err.values()[0]))\n",
+    "        xs = range(len(err_dict.values()[0]))\n",
     "    \n",
     "    from matplotlib.lines import Line2D\n",
     "    markers = [m for m in list(Line2D.markers.keys()) if m not in [\".\", \"\", \",\"]]\n",
@@ -43,32 +43,36 @@
     "    i = 0\n",
     "    fig, axs = plt.subplots(1, 2, squeeze=False)\n",
     "    fig.set_size_inches(10, 5)\n",
-    "    for method, absolute_errors in absolute_err.items():\n",
+    "    max_abs = 0\n",
+    "    for method, err_list in err_dict.items():\n",
     "        markersize = 8 - i\n",
     "        \n",
     "        axs[0, 0].plot(\n",
     "            xs,\n",
-    "            absolute_errors,\n",
+    "            err_list,\n",
     "            label=method,\n",
     "            marker=markers[i],\n",
     "            ls=\":\",\n",
     "            markersize=markersize,\n",
     "        )\n",
     "        \n",
-    "        xvals = sorted(absolute_errors)\n",
+    "        xvals = sorted(np.abs(err_list))\n",
     "        yvals = np.linspace(0, 1, len(xvals))\n",
     "        axs[0, 1].plot(\n",
     "            xvals, yvals, label=method, marker=markers[i], ls=\":\", markersize=markersize\n",
     "        )\n",
     "        i += 1\n",
+    "        \n",
+    "        max_abs = max(max_abs, max(xvals))\n",
     "\n",
     "    # axs[0, 0].set_yscale('log')\n",
+    "    axs[0, 0].set_ylim(-max_abs, max_abs)\n",
     "    axs[0, 0].set_ylabel(ylabel)\n",
     "    axs[0, 0].set_xlabel(xlabel)\n",
     "    axs[0, 0].legend(loc=\"upper right\")\n",
     "\n",
     "    axs[0, 1].set_ylabel(\"cdf\")\n",
-    "    axs[0, 1].set_xlabel(ylabel)\n",
+    "    axs[0, 1].set_xlabel(\"absolute \"+ylabel)\n",
     "    axs[0, 1].grid(which=\"both\")\n",
     "    axs[0, 1].legend(loc=\"lower right\")\n",
     "    return fig, axs"
@@ -427,9 +431,10 @@
     "    ax_slices[i, -1].legend(loc='upper right')\n",
     "    title = appendix.replace(\"_\", \"\")\n",
     "    ax_slices[i, 0].set_ylabel(title)\n",
+    "    break\n",
     "ax_slices[-1, 0].set_xlabel(\"frequency [Hz]\")\n",
     "ax_slices[-1, 1].set_xlabel(\"frequency [Hz]\")\n",
-    "save_fig(fig_slice, f\"plots/{exp_name}_slice.png\")"
+    "#save_fig(fig_slice, f\"plots/{exp_name}_slice.png\")"
    ]
   },
   {
@@ -507,9 +512,8 @@
    "outputs": [],
    "source": [
     "from pandas_utils import filter_by_dict\n",
-    "\n",
-    "#exp_name = \"2021_02_23_wall\"\n",
-    "exp_name = \"2021_02_25_wall\"\n",
+    "exp_name = \"2021_02_23_wall\" # old buzzer\n",
+    "#exp_name = \"2021_02_25_wall\" # new buzzer\n",
     "\n",
     "# mic_type = 'measurement'\n",
     "mic_type = \"audio_deck\"\n",
@@ -523,6 +527,8 @@
     "df = filter_by_dict(results_df, filter_dict)\n",
     "assert len(df) == 1\n",
     "row = df.iloc[0]\n",
+    "\n",
+    "#distances_grid = np.arange(0, max_distance + 1)\n",
     "row"
    ]
   },
@@ -542,16 +548,7 @@
     "ax.set_title(\"old calibration\")\n",
     "fig, ax = plt.subplots()\n",
     "calib_function = get_calibration_function_dict(**filter_dict, ax=ax)\n",
-    "ax.set_title(\"new calibration\")\n",
-    "\n",
-    "max_distance = 50\n",
-    "#distances_grid = np.arange(0, max_distance + 1)\n",
-    "distances_grid = np.linspace(0, max_distance, 100)\n",
-    "\n",
-    "if row.mic_type == \"measurement\":\n",
-    "    df_theory = get_df_theory(row.df_freq, distances_grid, chosen_mics=[1])\n",
-    "else:\n",
-    "    df_theory = get_df_theory(row.df_freq, distances_grid, chosen_mics=range(4))"
+    "ax.set_title(\"new calibration\")"
    ]
   },
   {
@@ -564,8 +561,7 @@
     "\n",
     "df_matrix, df_freq, indices = prune_df_matrix(\n",
     "    row.df_matrix, row.df_freq, ratio_missing_allowed=0.5, verbose=True\n",
-    ")\n",
-    "df_theory_pruned = df_theory[:, indices, :]"
+    ")"
    ]
   },
   {
@@ -596,56 +592,30 @@
    },
    "outputs": [],
    "source": [
-    "#TODO(FD): remove below if not used anymore\n",
-    "def plot_distance_slice(\n",
-    "    slice_exp, slice_the, dist_exp, dist_the, plot_d=False, plot_f=True\n",
-    "):\n",
+    "from simulation import get_dist_slice_theory\n",
     "\n",
-    "    fig = fig_f = None\n",
-    "\n",
-    "    if plot_d:\n",
-    "        fig, axs = plt.subplots(1, slice_exp.shape[0], squeeze=False, sharey=True)\n",
-    "        fig.set_size_inches(10, 5)\n",
-    "        fig.suptitle(f\"standardized distance slices, at frequency {f:.0f}Hz\")\n",
-    "\n",
-    "    if plot_f:\n",
-    "        fig_f, axs_f = plt.subplots(1, slice_exp.shape[0], squeeze=False, sharey=True)\n",
-    "        fig_f.set_size_inches(10, 5)\n",
-    "        fig_f.suptitle(f\"FFT of standardized distance slices, at frequency {f:.0f}Hz\")\n",
-    "\n",
+    "def plot_ffts(slice_exp, slice_the, dist):\n",
+    "    fig_f, axs_f = plt.subplots(1, slice_exp.shape[0], squeeze=False, sharey=True)\n",
+    "    fig_f.set_size_inches(10, 5)\n",
+    "    fig_f.suptitle(f\"FFT of standardized distance slices, at frequency {f:.0f}Hz\")\n",
     "    for m in range(slice_exp.shape[0]):\n",
     "        slice_exp_norm = deepcopy(slice_exp[m])\n",
     "        slice_the_norm = deepcopy(slice_the[m])\n",
-    "\n",
     "        slice_exp_norm -= np.mean(slice_exp_norm)\n",
-    "        slice_exp_norm /= np.max(slice_exp_norm) - np.min(slice_exp_norm)\n",
-    "\n",
     "        slice_the_norm -= np.mean(slice_the_norm)\n",
-    "        slice_the_norm /= np.max(slice_the_norm) - np.min(slice_the_norm)\n",
-    "\n",
-    "        if plot_d:\n",
-    "            axs[0, m].plot(dist_the, slice_the_norm, label=\"theoretical\")\n",
-    "            axs[0, m].plot(dist_exp, slice_exp_norm, label=\"measured\")\n",
-    "            axs[0, m].set_title(f\"mic{m}\")\n",
-    "            axs[0, m].legend(loc=\"upper right\")\n",
     "\n",
     "        n = max(len(slice_exp_norm), 1000)\n",
-    "        freqs_exp = np.fft.rfftfreq(n, d=dist_exp[1] - dist_exp[0])  # unit: 1/cm\n",
-    "        freqs_theory = np.fft.rfftfreq(n, d=dist_the[1] - dist_the[0])  # unit: 1/cm\n",
-    "\n",
+    "        freqs = np.fft.rfftfreq(n, d=dist[1] - dist[0])  # unit: 1/cm\n",
     "        fft_exp = np.abs(np.fft.rfft(slice_exp_norm, n=n))\n",
     "        fft_exp /= np.sum(fft_exp)\n",
-    "\n",
     "        fft_theory = np.abs(np.fft.rfft(slice_the_norm, n=n))\n",
     "        fft_theory /= np.sum(fft_theory)\n",
     "\n",
-    "        if plot_f:\n",
-    "            axs_f[0, m].plot(freqs_theory, fft_theory, label=\"theoretical\")\n",
-    "            axs_f[0, m].plot(freqs_exp, fft_exp, label=\"measured\")\n",
-    "            axs_f[0, m].set_title(f\"mic{m}\")\n",
-    "            axs_f[0, m].legend(loc=\"upper right\")\n",
-    "    return fig, fig_f\n",
-    "\n",
+    "        axs_f[0, m].plot(freqs, fft_theory, label=\"theoretical\")\n",
+    "        axs_f[0, m].plot(freqs, fft_exp, label=\"measured\")\n",
+    "        axs_f[0, m].set_title(f\"mic{m}\")\n",
+    "        axs_f[0, m].legend(loc=\"upper right\")\n",
+    "    return fig_f\n",
     "\n",
     "valid_freqs = df_freq[~np.any(np.isnan(df_matrix), axis=(0, 2))]\n",
     "plot_freqs = [valid_freqs[0], valid_freqs[len(valid_freqs) // 2], valid_freqs[-2]]\n",
@@ -653,18 +623,14 @@
     "    slice_exp = df_matrix[:, i, :]\n",
     "    if np.any(np.isnan(slice_exp)):\n",
     "        slice_exp = fill_nans(slice_exp, row.df_dist)\n",
-    "\n",
-    "    fig, fig_f = plot_distance_slice(\n",
+    "    slice_the = get_dist_slice_theory(f, row.df_dist).T\n",
+    "    \n",
+    "    fig_f = plot_ffts(\n",
     "        slice_exp=slice_exp,\n",
-    "        slice_the=df_theory_pruned[:, i, :],\n",
-    "        dist_exp=row.df_dist,\n",
-    "        dist_the=distances_grid,\n",
-    "        plot_d=True,\n",
-    "        plot_f=True,\n",
+    "        slice_the=slice_the,\n",
+    "        dist=row.df_dist,\n",
     "    )\n",
-    "    if f in plot_freqs:\n",
-    "        save_fig(fig, f\"plots/{fname}_distance_slice_{f:.0f}.pdf\")\n",
-    "    break "
+    "    break"
    ]
   },
   {
@@ -674,45 +640,98 @@
    "outputs": [],
    "source": [
     "from calibration import fit_distance_slice\n",
-    "from simulation import get_dist_slice_theory\n",
+    "\n",
+    "fitting_results = pd.DataFrame(columns=['frequency', 'mic', 'absorption', 'gain', 'offset', 'median', 'method'])\n",
     "\n",
     "valid_freqs = df_freq[~np.any(np.isnan(df_matrix), axis=(0, 2))]\n",
     "plot_freqs = [valid_freqs[0], valid_freqs[len(valid_freqs) // 2], valid_freqs[-2]]\n",
     "\n",
-    "chosen_mics = [2]\n",
-    "for i, f in enumerate(df_freq):\n",
-    "    slice_exp = df_matrix[:, i, :]\n",
-    "    if np.any(np.isnan(slice_exp)):\n",
-    "        slice_exp = fill_nans(slice_exp, row.df_dist)\n",
+    "chosen_mics = range(4)\n",
     "\n",
-    "    print(f\"for: frequency {f}Hz\")\n",
-    "    #print(\"attenuation, absorption, gain, distance offset\")\n",
-    "    fig, axs = plt.subplots(1, len(chosen_mics), sharey=True, squeeze=False)\n",
-    "    fig.set_size_inches(5*len(chosen_mics), 5)\n",
-    "    for i, mic_idx in enumerate(chosen_mics):\n",
-    "        # heuristic\n",
-    "        # TODO(FD) find out where 13 here comes from? \n",
-    "        gain_x = np.round(np.median(slice_exp[mic_idx, :]), 2)/13\n",
-    "        coeffs_h = [1.0, 0.2, gain_x, 0]\n",
-    "        slice_heur = get_dist_slice_theory(\n",
-    "            f,\n",
-    "            row.df_dist+coeffs_h[3],\n",
-    "            yaw_deg=0,\n",
-    "            chosen_mics=[mic_idx],\n",
-    "            attenuation=coeffs_h[0],\n",
-    "            wall_absorption=coeffs_h[1],\n",
-    "            gain_x=coeffs_h[2]\n",
-    "        )\n",
-    "        coeffs, slice_calib, cost = fit_distance_slice(\n",
-    "            slice_exp.T, row.df_dist, yaw_deg=0, frequency=f, chosen_mics=[mic_idx]\n",
-    "        )\n",
-    "        print(f\"gain for {mic_idx}: {coeffs_h[2]:.2f}, {coeffs[2]:.2f}, {coeffs_h[2]/coeffs[2]:.2f}, {cost:.2f}\")\n",
-    "        axs[0, i].plot(row.df_dist, slice_exp[mic_idx, :], label=\"experimental\")\n",
-    "        axs[0, i].plot(row.df_dist, slice_calib[:, 0], label=\"calibrated\")\n",
-    "        axs[0, i].plot(row.df_dist, slice_heur[:, 0], label=\"heuristic\")\n",
-    "        axs[0, i].set_title(f'mic{mic_idx}')\n",
-    "    fig.suptitle(f'{f}Hz')\n",
-    "    axs[0, i].legend()"
+    "for method in ['brute', 'minimize']:\n",
+    "    times = []\n",
+    "    for i, f in enumerate(df_freq):\n",
+    "        slice_exp = df_matrix[:, i, :]\n",
+    "        if np.any(np.isnan(slice_exp)):\n",
+    "            slice_exp = fill_nans(slice_exp, row.df_dist)\n",
+    "\n",
+    "        #print(\"attenuation, absorption, gain, distance offset\")\n",
+    "        fig, axs = plt.subplots(1, len(chosen_mics), sharey=True, squeeze=False)\n",
+    "        fig.set_size_inches(5*len(chosen_mics), 5)\n",
+    "        for i, mic_idx in enumerate(chosen_mics):\n",
+    "            # heuristic\n",
+    "            gain_x = np.round(np.median(slice_exp[mic_idx, :]), 2)\n",
+    "            coeffs_h = [0.2, gain_x, 0]\n",
+    "            slice_heur = get_dist_slice_theory(\n",
+    "                f,\n",
+    "                row.df_dist+coeffs_h[2],\n",
+    "                yaw_deg=0,\n",
+    "                chosen_mics=[mic_idx],\n",
+    "                wall_absorption=coeffs_h[0],\n",
+    "                gain_x=coeffs_h[1]\n",
+    "            )\n",
+    "            t0 = time.time()\n",
+    "            coeffs, slice_calib, cost = fit_distance_slice(\n",
+    "                slice_exp.T, row.df_dist, yaw_deg=0, frequency=f, chosen_mics=[mic_idx],\n",
+    "                method=method\n",
+    "            )\n",
+    "            times.append(time.time() - t0)\n",
+    "            axs[0, i].plot(row.df_dist, slice_exp[mic_idx, :], label=\"experimental\")\n",
+    "            axs[0, i].plot(row.df_dist, slice_calib[:, 0], label=\"calibrated\")\n",
+    "            axs[0, i].plot(row.df_dist, slice_heur[:, 0], label=\"heuristic\")\n",
+    "            axs[0, i].set_title(f'mic{mic_idx}')\n",
+    "            fitting_results.loc[len(fitting_results), :] = dict(\n",
+    "                frequency=f,\n",
+    "                mic=mic_idx,\n",
+    "                absorption=coeffs[0],\n",
+    "                gain=coeffs[1],\n",
+    "                offset=coeffs[2],\n",
+    "                median=gain_x,\n",
+    "                method=method\n",
+    "            )\n",
+    "        fig.suptitle(f'{f}Hz')\n",
+    "        axs[0, i].legend()\n",
+    "\n",
+    "        #if f in plot_freqs:\n",
+    "            #save_fig(fig, f\"plots/{fname}_distance_slice_{f:.0f}.pdf\")\n",
+    "    print(f'average time {method}: {np.mean(times):.2f}s')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "color_palette = 'tab10'\n",
+    "extra_kwargs = {\n",
+    "    'linewidth':0,\n",
+    "    'palette':color_palette,\n",
+    "    'style': 'method',\n",
+    "    'hue': 'mic',\n",
+    "    'data': fitting_results,\n",
+    "    'x': 'frequency',\n",
+    "}\n",
+    "palette = sns.palettes.color_palette(color_palette)\n",
+    "fitting_results = fitting_results.apply(pd.to_numeric, errors='ignore', axis=0)\n",
+    "plt.figure()\n",
+    "sns.scatterplot(y='gain', **extra_kwargs, )\n",
+    "plt.figure()\n",
+    "sns.scatterplot(y='median', **extra_kwargs)\n",
+    "\n",
+    "#plt.figure()\n",
+    "#sns.scatterplot(y='absorption', **extra_kwargs)\n",
+    "\n",
+    "plt.figure()\n",
+    "sns.scatterplot(y='offset', **extra_kwargs)\n",
+    "\n",
+    "ls = {'brute':'-', 'minimize':':'}\n",
+    "for method, df in fitting_results.groupby('method'):\n",
+    "    medians = df.groupby(['mic']).offset.median()\n",
+    "    [plt.axhline(m, color=palette[i], ls=ls[method]) for i, m in enumerate(medians)]\n",
+    "    plt.plot([], [], color='black', ls=ls[method], label=method)\n",
+    "plt.legend(loc='upper left', bbox_to_anchor=[1, 1])\n",
+    "pass"
    ]
   },
   {
@@ -722,43 +741,30 @@
    "outputs": [],
    "source": [
     "# distance slice algorithm\n",
-    "from constants import SPEED_OF_SOUND\n",
-    "gt = 90\n",
-    "abs_err_dict = {f\"mic{m}\": [np.nan]*len(df_freq) for m in range(df_matrix.shape[0])}\n",
+    "from wall_detector import get_approach_angle_fft\n",
     "\n",
+    "gt_gamma = 90 # in degrees\n",
+    "err_dict = {f\"mic{m}\": [np.nan]*len(df_freq) for m in range(df_matrix.shape[0])}\n",
     "for i, f in enumerate(df_freq):\n",
-    "    thetas = []\n",
     "    \n",
-    "    slice_exp = df_matrix[:, i, :]\n",
-    "    for m in range(slice_exp.shape[0]):\n",
-    "        slice_exp_norm = deepcopy(slice_exp[m])\n",
-    "        slice_exp_norm -= np.mean(slice_exp_norm)\n",
-    "        n = max(len(slice_exp_norm), 1000)\n",
+    "    plt.figure()\n",
+    "    for mic_idx in range(df_matrix.shape[0]):\n",
+    "        d_slice = df_matrix[mic_idx, i, :] \n",
+    "        cosines_gamma, prob = get_approach_angle_fft(d_slice, f, row.df_dist)\n",
+    "        cosine_gamma = cosines_gamma[np.argmax(prob)]\n",
+    "        gamma = np.arccos(cosine_gamma) * 180 / np.pi\n",
+    "        plt.plot(cosines_gamma, prob)\n",
+    "        plt.axvline(cosine_gamma, label=f'mic{mic_idx}: $\\\\gamma$={gamma:.1f}', color=f'C{mic_idx}')\n",
+    "        err_dict[f\"mic{mic_idx}\"][i] = gamma - gt_gamma\n",
     "        \n",
-    "        freqs_exp = np.fft.rfftfreq(n, d=row.df_dist[1]-row.df_dist[0]) # unit: 1/cm\n",
-    "        fft_exp = np.abs(np.fft.rfft(slice_exp_norm, n=n))\n",
+    "    plt.title(f'frequency {f:.0f}Hz')\n",
+    "    plt.xlabel('sine of angle of approach $\\\\gamma$')\n",
+    "    plt.ylabel('probability')\n",
+    "    plt.xscale('log')\n",
+    "    plt.legend()\n",
     "        \n",
-    "        if np.argmax(fft_exp) == 0:\n",
-    "            continue\n",
-    "\n",
-    "        period_exp = 1 / freqs_exp[np.argmax(fft_exp)] # unit: cm\n",
-    "        period_theory = SPEED_OF_SOUND / 2 / f * 100 # unit: cm\n",
-    "        ratio = period_exp / period_theory\n",
-    "        if ratio > 1:\n",
-    "            print('Warning for ratio bigger than 1:', ratio)\n",
-    "            ratio = 1\n",
-    "        #ratio = min(period_exp / period_theory, 1)\n",
-    "        theta = 180 / np.pi * np.arcsin(ratio)\n",
-    "        abs_err_dict[f\"mic{m}\"][i] = np.abs(theta - gt)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig, axs = plot_performance(abs_err_dict, xs=df_freq, xlabel=\"frequency [Hz]\", ylabel=\"absolute error [deg]\")\n",
+    "fig, axs = plot_performance(err_dict, xs=df_freq, \n",
+    "           xlabel=\"frequency [Hz]\", ylabel=\"error [deg]\")\n",
     "save_fig(fig, f'plots/{fname}_distance_slice_performance.pdf')"
    ]
   },
